--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "./api/index.js",
+        "src": "index.js",
         "use": "@now/node"
       }
     ],
     "routes": [
       {
-        "src": "./routes/routes.js",
-        "dest": "./api/index.js"
+        "src": "/routes/routes.js",
+        "dest": "index.js"
       }
     ]
   }
